--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "encoding": "^0.1.13",
     "next": "^14.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "rehype-remark": "^10.0.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.3.0",
@@ -38,6 +39,7 @@
     "rehype-autolink-headings": "^5.1.0",
     "rehype-parse": "^7.0.1",
     "rehype-slug": "^4.0.1",
+    "remark-gfm": "^1.0.0",
     "rss-parser": "^3.12.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
